k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
  labels:
    app: cart-service
    tier: backend
spec:
  replicas: 2
  #strategy:
    #type: RollingUpdate
    #rollingUpdate:
    #  maxUnavailable: 2
    #  maxSurge: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
        tier: backend
    spec:
      containers:
        - name: cart-service-container
          image: kielniakodu/k8s-node-app:0.0.3
          ports:
            - containerPort: 3000
