k8s/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
    - name: app
      image: nodejs-demo
      imagePullPolicy: Never
      ports:
        - containerPort: 3000
