k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service-service
  labels:
    app: cart-service
    tier: backend
spec:
  selector:
    app: cart-service
  ports:
    - port: 3000
