k8s/app-ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /cart-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: cart-service-service
              port:
                number: 3000
