k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ##ingressClassName: nginx-example
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cart-service-service
              port:
                number: 3000
